Update header & footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -60,7 +60,7 @@
 
 				},
 				onClickLogin: function(event, loginURL) {
-					window.location = '{{ esso_base_url }}' + "/login-from-service?client_id=" + '{{ esso_client_id }}' + "&redirect_uri=" + window.location.href;
+					window.location = '{{ esso_base_url }}' + '/login-from-service?client_id=' + '{{ esso_client_id }}' + "&redirect_uri=" + window.location.href;
 				}
 			});
 
