--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0">
+	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1">
 	<meta name="format-detection" content="telephone=no">
 
 	{% capture head_title %}{% value page.title %}{% endcapture %}
@@ -11,15 +11,11 @@
 	{% capture description %}{% value site.description %}{% endcapture %}
 	<meta name="description" content="{{ description | strip_html | strip_newlines | truncate: 160 }}">
 	<meta name="robots" content="index,follow">
-	<link rel="icon" type="image/png" href="/img/favicon.png">
+	<link rel="icon" type="image/png" href="/images/favicon.png">
 
 	<!-- ▼ CSS ▼ -->
 		{% if site.lang == 'en' %} {% include fonts/ltr.html %} {% else %} {% include fonts/rtl.html %} {% endif %}
-		<link rel="stylesheet" href="/css/main.css" type="text/css" media="all">
-		<!--[if IE]>
-			<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-			<script type="text/javascript" src="/js/html5.js"></script>
-		<![endif]-->
+		<link rel="stylesheet" href="/stylesheets/styles.css" type="text/css" media="all">
 	<!-- ▲ CSS ▲ -->
 
 
@@ -87,5 +83,5 @@
 	<!-- ▲ Google Tag Manager ▲ -->
 
 	<!-- ▼ Header ▼ -->
-		<header class="globHeader"></header>
+		<header class="globHeader header"></header>
 	<!-- ▲ Header ▲ -->
