--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,9 +15,8 @@
 
 	<!-- ▼ CSS ▼ -->
 		{% if site.lang == 'en' %} {% include fonts/ltr.html %} {% else %} {% include fonts/rtl.html %} {% endif %}
-		<link rel="stylesheet" href="/stylesheets/styles.css" type="text/css" media="all">
+		<link rel="stylesheet" href="/css/main.css" type="text/css" media="all">
 	<!-- ▲ CSS ▲ -->
-
 
 	<!-- ▼ Global components ▼ -->
 		{% if jekyll.environment == 'production' %}
