--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
 	<link rel="icon" type="image/png" href="/images/favicon.png">
 
 	<!-- ▼ CSS ▼ -->
-		{% if site.lang == 'en' %} {% include fonts/ltr.html %} {% else %} {% include fonts/rtl.html %} {% endif %}
+		<!-- {% if site.lang == 'en' %} {% include fonts/ltr.html %} {% else %} {% include fonts/rtl.html %} {% endif %} -->
 		<link rel="stylesheet" href="/css/main.css" type="text/css" media="all">
 	<!-- ▲ CSS ▲ -->
 
