--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,9 +24,9 @@
       </div>
 
       <script>
-        document.zendeskHost = '{{ zendesk_subdomain }}.zendesk.com';
-        document.zendeskLang = '{{ site.lang }}';
-      </script>
+      document.zendeskHost = '{{ zendesk_subdomain }}.zendesk.com';
+document.zendeskLang = '{{ site.lang }}';
+</script>
 
     {% endif %}
   <!-- ▲ Zendesk ▲ -->
@@ -34,8 +34,8 @@
   <!-- ▼ JavaScript ▼ -->
     <script type="text/javascript" src="/js/main.js"></script>
     <script type="text/javascript">
-      new Core();
-    </script>
+    new Core();
+</script>
   <!-- ▲ JavaScript ▲ -->
 
 	<!-- ▼ Global components ▼ -->
@@ -74,11 +74,17 @@
 				},
 				onClickLogin: function(event, loginURL) {
 					window.location = '{{ esso_base_url }}' + '/login-from-service?client_id=' + '{{ esso_client_id }}' + "&redirect_uri=" + window.location.href;
+				},
+				onClickLogout: function(event, logoutURL, origin) {
+					delete localStorage.user910accessToken;
+					window.location = `${logoutURL}?redirect_uri=${encodeURIComponent(origin)}`;
 				}
 			});
 
 			new GlobalLogin('{{ esso_api_base_url }}', '{{ esso_client_id }}', function(userData) {
 				header.update({ loggedInUserInfo: userData });
+			}, function() {
+				header.update({loggedInUserInfo: null});
 			});
 
 			const footer = new nine10ths.components.Footer(document.querySelector('.globFooter'), {
@@ -108,18 +114,27 @@
 	<!-- ▲ Hotjar ▲ -->
 
   <script>
-    var cb = function() {
-      var l = document.createElement('link'); l.rel = 'stylesheet';
-      l.href = '/css/main.css';
-      var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
+  var cb = function() {
+  var l = document.createElement('link');
+  l.rel = 'stylesheet';
+  l.href = '/css/main.css';
+  var h = document.getElementsByTagName('head')[0];
+  h.parentNode.insertBefore(l, h);
 
-      var ll = document.createElement('link'); ll.rel = 'stylesheet';
-      ll.href = 'https://cdn.910ths.sa/css/bundle.min.css';
-      var hh = document.getElementsByTagName('head')[0]; hh.parentNode.insertBefore(ll, hh);
-    };
+  var ll = document.createElement('link');
+  ll.rel = 'stylesheet';
+  ll.href = 'https://cdn.910ths.sa/css/bundle.min.css';
+  var hh = document.getElementsByTagName('head')[0];
+  hh.parentNode.insertBefore(ll, hh);
+};
 
-    var raf = requestAnimationFrame || mozRequestAnimationFrame || webkitRequestAnimationFrame || msRequestAnimationFrame;
-    if (raf) raf(cb); else window.addEventListener('load', cb);
-  </script>
+var raf =
+  requestAnimationFrame ||
+  mozRequestAnimationFrame ||
+  webkitRequestAnimationFrame ||
+  msRequestAnimationFrame;
+if (raf) raf(cb);
+else window.addEventListener('load', cb);
+</script>
 </body>
 </html>
