Fix/PLT-1338-join us button style

--- a/scss/core/_button.scss
+++ b/scss/core/_button.scss
@@ -71,15 +71,16 @@
 	}
 
 	&.button--solidLightest{
-		background-color: $c-lightest;
+		background-color: transparent;
+		color: $c-lightest;
 		border-color: $c-lightest;
-		color: $c-mainDark;
 
 		&.hover,
 		&:focus,
 		&:hover{
-			background-color: transparent;
-			color: $c-lightest;
+			background-color: $c-lightest;
+			border-color: $c-lightest;
+			color: $c-mainDark;
 		}
 	}
 
