--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<script id='pixel-script-poptin' src='https://cdn.popt.in/pixel.js?id=c48f4dd857eba' async='true'></script>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1">
