--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -28,6 +28,10 @@ layout: index
     {% if page.is_partners_visible %}
 		  {% include sections/partners.html %}
     {% endif %}
+    
+    {% if page.is_newsletter_visible %}
+      {% include sections/newsletter.html %}
+    {% endif %}
 
 	</div>
 
