--- a/scss/components/_core.scss
+++ b/scss/components/_core.scss
@@ -23,6 +23,7 @@
 @import "offerBox";
 @import "workBox";
 @import "closeButton";
+@import "newsletter";
 
 @import "textBox_RWD";
 @import "homeGrid_RWD";
@@ -41,3 +42,4 @@
 @import "workGrid_RWD";
 @import "popup_RWD";
 @import "offerBox_RWD";
+@import "newsletter_RWD";
