--- a/scss/components/_newsletter.scss
+++ b/scss/components/_newsletter.scss
@@ -47,6 +47,11 @@
       cursor: pointer;
       transition: color .3s;
 
+      @include parent('body', '[dir=rtl]') {
+        padding-left: 0;
+        padding-right: 28px;
+      }
+
       &:hover {
         color: rgba(0, 0, 0, .33);
       }
@@ -62,6 +67,11 @@
         border: 1px solid rgba(#2b2b2b, .33);
         border-radius: 3px;
         box-sizing: border-box;
+
+        @include parent('body', '[dir=rtl]') {
+          left: auto;
+          right: 0;
+        }
       }
 
       &:after {
@@ -76,6 +86,11 @@
         border-radius: 3px;
         transition: transform .3s;
         transform: scale(0);
+
+        @include parent('body', '[dir=rtl]') {
+          left: auto;
+          right: 2px;
+        }
       }
     }
 
