--- a/scss/components/_newsletter_RWD.scss
+++ b/scss/components/_newsletter_RWD.scss
@@ -18,12 +18,18 @@
       width: 100%;
     }
 
+    .wrapper,
+    .stdCols__col {
+      display: block;
+    }
+
     &__image {
       float: none !important;
       display: block;
       margin: 0 auto 65px auto;
     }
 
+    &__title,
     &__form {
       text-align: center;
     }
