--- a/_includes/sections/products.html
+++ b/_includes/sections/products.html
@@ -24,7 +24,7 @@
 								<div class="homeGrid__item {{ settings_layout }}">
 									<div class="homeGrid__space">
 										<div class="homeGrid__box {{ settings_box }} {{ settings_lightness }}">
-											<div class="homeGrid__bgImg" style="background-image: url({{ product.background_asset | imgix_url: q: 50, w: 600, h: 600 }});"></div>
+											<div class="homeGrid__bgImg" style="background-image: url({{ product.background_asset | imgix_url: w: 600, h: 600 }});"></div>
 											<div class="homeGrid__content {{ settings_content }}">
 												<div class="homeGrid__inner">
 
