--- a/_includes/sections/quote.html
+++ b/_includes/sections/quote.html
@@ -11,7 +11,7 @@
 					<div class="quoteBox__personOuter">
 						<div class="quoteBox__person">
 							<div class="quoteBox__avatar">
-								<img src="{{ section.avatar_image | imgix_url: q: 50, w: 50, h: 50 }}" alt="avatar" />
+								<img src="{{ section.avatar_image | imgix_url: w: 50, h: 50 }}" alt="avatar" />
 							</div>
 							<div class="quoteBox__name">
 								<p><strong>{% value section.author %}</strong></p>
