--- a/_layouts/about-us.html
+++ b/_layouts/about-us.html
@@ -32,7 +32,7 @@ layout: about-us
 								<div class="articleBox__item">
 									<div class="articleBox__itemInner articleBox__itemInner--center">
 										<div class="articleBox__img">
-											<img src="{{ section.image | imgix_url: w: 600, h: 350 }}" alt="" />
+											<img src="{{ section.image | imgix_url: q: 50, w: 600, h: 350 }}" alt="" />
 										</div>
 									</div>
 								</div>
