--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -54,7 +54,7 @@
 		{% if jekyll.environment == 'production' %}
 			<script src="https://cdn.910ths.sa/js/nine10ths-components.min.js?_={{ site.version }}"></script>
 		{% else %}
-			<script src="https://s3.eu-central-1.amazonaws.com/nine10ths-cdn-uat/js/nine10ths-components.js?_={{ site.version }}"></script>
+			<script src="https://uat-cdn.910ths.sa/js/nine10ths-components.min.js?_={{ site.version }}"></script>
 		{% endif %}
 
 		<script type="text/javascript">
