--- a/scss/components/_zendesk.scss
+++ b/scss/components/_zendesk.scss
@@ -1,4 +1,4 @@
-.zendeskButton {
+/*.zendeskButton {
 	position: fixed;
 	right: 20px;
 	bottom: 20px;
@@ -61,4 +61,4 @@ body > iframe[data-test-id=ChatWidgetMobileWindow] {
 
 body > #siteleaf__toolbar {
 	display: block !important;
-}
+}*/
